# proof-assistant

./: README.md  build.sh  clean_test.ml  dune-project  logic.ml  logic.mli  peano.ml  proof-assistant.opam  test_lemma_2.ml  test_logic.ml  test_logic_first_order.ml  test_logic_first_order_pp.ml  test_logic_propositional_calculus.ml  test_proof.ml
src/: dune  logic.ml  logic.mli  logic_lexer.mll  logic_parser.mly  peano.ml  peano.mli
test/: dune  test_001_fresh_var.ml  test_002_free_vars.ml  test_003_eq_formula.ml  test_004_subst_in_term.ml  test_005_subst_in_formula.ml  test_lemma_1.ml  test_lemma_2.ml  test_logic_first_order_pp.ml  test_logic_parser.ml  test_logic_propositional_calculus.ml  test_pp_utop.ml
