opam-version: "2.0"
name: "proof-assistant"
version: "0.1"
synopsis: "A first-order logic proof assistant"
maintainer: "apietrasz03@gmail.com"
authors: ["Alan Pietrasz"]
license: "MIT"
depends: [
  "dune" {>= "3.7"}
  "ocaml" {>= "4.12"}
  "alcotest"
  "base"
]
build: [
  ["dune" "build" "-p" name]
]
