(env
  (dev (flags (:standard -warn-error -32-33))))

(test
 (name test_logic_propositional_calculus)
 (libraries proof_assistant alcotest))

(test
 (name test_logic_first_order_pp)
 (libraries proof_assistant alcotest))

(test
 (name test_lemma_1)
 (libraries proof_assistant alcotest))

(test
 (name test_lemma_2)
 (libraries proof_assistant alcotest))

; (test
;  (name test_lemma_3)
;  (libraries proof_assistant alcotest))

;; Additional parser test:
; (test
;  (name test_logic_parser)
;  (libraries proof_assistant alcotest))

;; TDD test files:
(test
 (name test_001_fresh_var)
 (libraries proof_assistant alcotest))

(test
 (name test_002_free_vars)
 (libraries proof_assistant alcotest))

(test
 (name test_003_eq_formula)
 (libraries proof_assistant alcotest))

(test
 (name test_004_subst_in_term)
 (libraries proof_assistant alcotest))

(test
 (name test_005_subst_in_formula)
 (libraries proof_assistant alcotest))